# c3

./: Cargo.toml  a
.cargo/: config.toml
src/: main.rs
